[project]
name = "ttldict"
version = "0.1.0"
description = "Python dictionary with TTL support"
authors = [
    { name = "Dongruixuan Li", email = "dongruixuan@hotmail.com" },
    { name = "liangjs", email = "liangjs@pku.edu.cn" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
